tomcat-db-test/tomcat-db-test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  replicas: 1
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: tomcat
        image: 8bin/tomcat-dbtest:1.0.0
        ports:
        - containerPort: 8080
