tomcat-db-test/tomcat-db-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
spec:
  selector:
    app: was
  ports:
    - port: 8080
      targetPort: 8080
